Homepage format overhaul - Need to fix gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,105 +1,75 @@
 #root {
-  min-width: 1080px;
-  margin: 0 auto;
-  padding: 0rem;
+  min-width: 1080px
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  background-color: pink;
+}
+
+.headerSection{
+  background-color: rgba(201, 201, 201, 0.473);
+  height: 5em;
+  text-align: center;
+  background-color: red;
+}
+
+.contentSection{
+  min-height: 40vh;
+  background-color: lightblue;
 }
 
 .titleSection{
-  text-align: center;
-}
-
-.sectionHeader{
-  overflow: hide;
-  background-color: #fdfdfd52;
-}
-
-.sectionContent{
-  padding-bottom: 2rem;
-  margin: 0 auto;
-  min-height: 400px;
-}
-
-.sectionHeader, .sectionContent{
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
-.sectionDivider{
-  height: 100px;
-  background-color: rgba(201, 201, 201, 0.473);
-}
-
-
-.headerImage{
-  position: relative;
-  text-align: center;
-
-  h1, h3{
-    color: black;
-  }
-
-  h1{
-    font-size: 5em;
-  }
-
-  h3{
-    font-size: 2em;
-  }
-
-  img, video{
-    z-index: -1;
-    width: 100%;
-    max-height: 60vh;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .centeredOverlay{
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  .headerImage{
+    margin-bottom: -0.5em;
+    z-index: -10;
+  
+    h1{
+      font-size: 5em;
+    }
+  
+    h3{
+      font-size: 2em;
+    }
+  
+    img, video{
+      z-index: -1;
+      width: 100%;
+      max-height: 60vh;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  
+    .centeredOverlay{
+      position: absolute;
+      top: 15%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
   }
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-}
-
-.logo:hover {
-  filter: drop-shadow(0 0 2em #39a6ebfd);
-}
-
-video{
-  width: 100%;
-  height: 100%;
-}
-
-.horizontalList{
+.tileContainer{
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  align-items: center;
+  
+  .tileItem{
+    max-height: 250px;
+    background-color: lightgrey;
+  }
  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+  #item1:hover{
+    filter: drop-shadow(0 0 2em #a1effdfd);
   }
-
-  li{
-    padding-left: 3em;
-    display: inline;
+  #item2:hover{
+    filter: drop-shadow(0 0 2em #d7b2db);
   }
-
-  img{
-    height: 3em;
-    width: 3em;
+  #item3:hover{
+    filter: drop-shadow(0 0 2em #a4fda1fd);
   }
 }
 
@@ -126,4 +96,30 @@ video{
   background-color: rgb(114, 114, 114);
   cursor: pointer;
  }
+}
+
+//Footer
+#footerSection{
+  margin-top: 3em;
+  margin-bottom: 3em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(201, 201, 201, 0.473);
+
+  ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li{
+    padding-left: 3em;
+    display: inline;
+  }
+
+  img{
+    height: 3em;
+    width: 3em;
+  }
 }
